--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -2,5 +2,6 @@
     "name": "ControleFisico",
     "short_name": "CF",
     "start_url": ".",
-    "display": "standalone"
+    "display": "standalone",
+    "description": "Isso ai"
 }
